--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    tools:context=".MainActivity"
-    tools:ignore="MissingConstraints">
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,8 +19,8 @@
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nom d'utilisateur"
-        android:inputType="text"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp" />
 
     <EditText
@@ -37,7 +35,36 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Se connecter"
-        android:onClick="Ouvrir_Liste"/>
+        android:text="Se connecter"/>
+
+    <!-- Label serveur -->
+    <TextView
+        android:id="@+id/textViewServeur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Serveur"
+        android:textSize="16sp"
+        android:textColor="#4E3016"
+        android:textStyle="bold" />
+
+    <!-- Zone de texte URL -->
+    <EditText
+        android:id="@+id/editTextURL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="URL du serveur"
+        android:inputType="textUri"
+        android:padding="16dp"
+        android:background="@android:drawable/edit_text" />
+
+    <!-- Menu deroulant URLs -->
+    <Spinner
+        android:id="@+id/spinnerURLs"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:drawable/btn_dropdown" />
 
 </LinearLayout>
